[tool.poetry]
name = "new-world-fishing"
version = "0.1.0"
description = ""
authors = ["Me <someone@somewhe.re>"]

[tool.poetry.dependencies]
python = "^3.9"
rpa = "^1.45.0"
requests = "^2.26.0"
mss = "^6.1.0"
pywin32 = "^302"
opencv-python = "^4.5.3"
Pillow = "^8.3.2"
pytesseract = "^0.3.8"
imutils = "^0.5.4"
PyAutoGUI = "^0.9.53"
simplejson = "^3.17.5"
wxPython = "^4.1.1"
PyDirectInput = "^1.0.4"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
